examples/test/testpolicy16217.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16217
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key39: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value35
          key16: value21
          key43: value28
      podSelector:
        matchLabels:
          key3: value45
          key19: value33
          key20: value15
